--- a/espnes-cpp/espnes-cpp.vcxproj
+++ b/espnes-cpp/espnes-cpp.vcxproj
@@ -36,8 +36,9 @@
   <ItemGroup>
     <ClInclude Include="include\addressing_modes.hpp" />
     <ClInclude Include="include\apu.hpp" />
-    <ClInclude Include="include\breakpoint_types.h" />
+    <ClInclude Include="include\breakpoint_types.hpp" />
     <ClInclude Include="include\cartridge.hpp" />
+    <ClInclude Include="include\controller.hpp" />
     <ClInclude Include="include\cpu.hpp" />
     <ClInclude Include="include\cpu_helpers.hpp" />
     <ClInclude Include="include\debug\debug.hpp" />
@@ -61,6 +62,7 @@
   <ItemGroup>
     <ClCompile Include="src\addressing_modes.cpp" />
     <ClCompile Include="src\cartridge.cpp" />
+    <ClCompile Include="src\controller.cpp" />
     <ClCompile Include="src\cpu.cpp" />
     <ClCompile Include="src\cpu_helpers.cpp" />
     <ClCompile Include="src\debug\debug.cpp" />
